--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -20,3 +20,4 @@ setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=c
 setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
 
 set-option -g history-limit 5000
+set -g default-terminal "screen-256color"
