now window start from 1

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -21,3 +21,8 @@ setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244
 
 set-option -g history-limit 5000
 set -g default-terminal "screen-256color"
+
+# Start windows and panes at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 1
+
