--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -2,4 +2,4 @@
 	email = jain.anmol1119@gmail.com
 	name = Anmol Jain
 [credential]
-	helper = cache --timeout=3600
+	helper = store --file ~/.my-credentials
