--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -26,3 +26,12 @@ set -g default-terminal "screen-256color"
 set -g base-index 1
 setw -g pane-base-index 1
 
+# vim-like pane switching
+bind -r ^ last-window
+bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
+bind -r l select-pane -R
+
+
+
