--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,7 +19,7 @@ setw -g mode-keys vi
 setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
 setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
 
-set-option -g history-limit 5000
+set-option -g history-limit 10000
 set -g default-terminal "screen-256color"
 
 # Start windows and panes at 1, not 0
@@ -33,5 +33,6 @@ bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
 
-
+# clear history with ctrl-L
+bind-key -n C-l send-keys C-l \; send-keys -R \; clear-history
 
