--- a/aerospace/.aerospace.toml
+++ b/aerospace/.aerospace.toml
@@ -113,7 +113,6 @@ outer.right =      0
 
 
 alt-ctrl-enter = 'fullscreen' # like rectangle
-alt-shift-r = 'reload-config'
 alt-ctrl-f = 'layout floating tiling'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#layout
@@ -131,6 +130,7 @@ alt-shift-h = 'move left'
 alt-shift-j = 'move down'
 alt-shift-k = 'move up'
 alt-shift-l = 'move right'
+alt-shift-r = 'reload-config'
 
 
 alt-shift-minus = 'resize smart -50'
@@ -216,7 +216,7 @@ alt-w = 'exec-and-forget open -a /Applications/WhatsApp.app'
 alt-m = 'exec-and-forget open -a /Applications/Spotify.app'
 alt-s = 'exec-and-forget open -a /Applications/Safari.app'
 alt-n = 'exec-and-forget open -a /System/Applications/Notes.app'
-alt-q = 'exec-and-forget open -a /System/Applications/QuickTime Player.app'
+alt-b = 'exec-and-forget open -a /System/Applications/Photo\ Booth.app'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#resize
 alt-r = 'mode resize'
