--- a/aerospace/.aerospace.toml
+++ b/aerospace/.aerospace.toml
@@ -45,10 +45,6 @@ on-focus-changed = ['move-mouse window-lazy-center'] # Mouse lazily follows any 
 # Also see: https://nikitabobko.github.io/AeroSpace/goodies#disable-hide-app
 automatically-unhide-macos-hidden-apps = false
 
-[[on-window-detected]]
-if.app-name-regex-substring = 'finder'
-run = 'layout floating'
-
 # Possible values: (qwerty|dvorak)
 # See https://nikitabobko.github.io/AeroSpace/guide#key-mapping
 [key-mapping]
@@ -114,6 +110,7 @@ outer.right =      0
 
 alt-ctrl-enter = 'fullscreen' # like rectangle
 alt-ctrl-f = 'layout floating tiling'
+alt-ctrl-c = 'reload-config'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#layout
 alt-slash = 'layout tiles horizontal vertical'
@@ -130,7 +127,6 @@ alt-shift-h = 'move left'
 alt-shift-j = 'move down'
 alt-shift-k = 'move up'
 alt-shift-l = 'move right'
-alt-shift-r = 'reload-config'
 
 
 alt-shift-minus = 'resize smart -50'
@@ -208,15 +204,14 @@ alt-tab = 'workspace-back-and-forth'
 alt-shift-tab = 'move-workspace-to-monitor --wrap-around prev'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#mode
-alt-shift-semicolon = 'mode service'
-
 alt-a = 'exec-and-forget open -a /Applications/Arc.app'
-alt-t = 'exec-and-forget open -a /Applications/Warp.app'
+alt-t = 'exec-and-forget open -a /Applications/WezTerm.app'
 alt-w = 'exec-and-forget open -a /Applications/WhatsApp.app'
 alt-m = 'exec-and-forget open -a /Applications/Spotify.app'
 alt-s = 'exec-and-forget open -a /Applications/Safari.app'
 alt-n = 'exec-and-forget open -a /System/Applications/Notes.app'
 alt-b = 'exec-and-forget open -a /System/Applications/Photo\ Booth.app'
+alt-f = 'exec-and-forget open -a /System/Applications/FaceTime.app'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#resize
 alt-r = 'mode resize'
@@ -226,9 +221,9 @@ j = 'resize height +50'
 k = 'resize height -50'
 l = 'resize width +50'
 b = 'balance-sizes'
+f = 'flatten-workspace-tree'
 esc = 'mode main'
 enter = 'mode main'
-
 
 [[on-window-detected]]
 if.app-id = 'net.whatsapp.WhatsApp'
@@ -241,3 +236,28 @@ run = 'move-node-to-workspace 5'
 [[on-window-detected]]
 if.app-id = 'com.apple.Notes'
 run = 'move-node-to-workspace 6' 
+
+[[on-window-detected]]
+if.app-id = 'com.apple.PhotoBooth'
+run = 'layout floating'
+
+[[on-window-detected]]
+if.app-name-regex-substring = 'finder'
+run = 'layout floating'
+
+[[on-window-detected]]
+if.app-name-regex-substring = 'slack'
+run = 'layout floating'
+
+[[on-window-detected]]
+if.app-name-regex-substring = 'zoom'
+run = 'layout floating'
+
+[[on-window-detected]]
+if.app-id = 'com.apple.FaceTime'
+run = 'layout floating'
+
+[[on-window-detected]]
+if.app-id = 'com.apple.Preview'
+run = 'layout floating'
+
