--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -3,3 +3,7 @@
 	name = Anmol Jain
 [credential]
 	helper = store --file ~/.my-credentials
+	helper = 
+	helper = /usr/local/share/gcm-core/git-credential-manager
+[credential "https://dev.azure.com"]
+	useHttpPath = true
